# peripheral_drivers_task

./: .gitignore  CMakeLists.txt
crc/include/: crc16_ccitt.hpp  crc8_maxim.hpp  crc_strategy.hpp  frame_codec.hpp
crc/src/: crc16_ccitt.cpp  crc8_maxim.cpp  frame_codec.cpp
crc/test/: crc_test.cpp
docs/: HARDWARE_GUIDE.md  README.md  RUNNING_AND_TESTING_GUIDE.md  TEST_CHECKLIST.md  task_requirements.md
gpio/: GTest_Guide.md
gpio/include/: digital_io.hpp  listeners.hpp
gpio/src/: digital_io.cpp  listeners.cpp
gpio/test/: gpio_test.cpp
gpio_build/: CTestTestfile.cmake  crc_test[1]_include.cmake  gpio_test  gpio_test[1]_include.cmake  gpio_test[1]_tests.cmake  i2c_test[1]_include.cmake  spi_test[1]_include.cmake  uart_test[1]_include.cmake
host_build/: CTestTestfile.cmake  crc_test  crc_test[1]_include.cmake  crc_test[1]_tests.cmake  gpio_test  gpio_test[1]_include.cmake  gpio_test[1]_tests.cmake  i2c_test  i2c_test[1]_include.cmake  i2c_test[1]_tests.cmake  spi_test  spi_test[1]_include.cmake  spi_test[1]_tests.cmake  uart_bench  uart_test  uart_test[1]_include.cmake  uart_test[1]_tests.cmake
host_build/Testing/Temporary/: CTestCostData.txt
i2c/include/: bme280_driver.hpp  lps22hb_driver.hpp  pav3015_driver.hpp  sensor.hpp  sensor_factory.hpp  shtc3_driver.hpp
i2c/src/: bme280_driver.cpp  lps22hb_driver.cpp  pav3015_driver.cpp  sensor_factory.cpp  shtc3_driver.cpp
i2c/test/: i2c_test_common.hpp  i2c_test_fixes.patch  test_bme280.cpp  test_concepts.cpp  test_csv_output.cpp  test_error_injection.cpp  test_fs3000.cpp  test_lps22hb.cpp  test_pav3015.cpp  test_sensor_factory.cpp  test_shtc3.cpp
i2c_build/: CTestTestfile.cmake  crc_test  crc_test[1]_include.cmake  crc_test[1]_tests.cmake  gpio_test  gpio_test[1]_include.cmake  gpio_test[1]_tests.cmake  i2c_test  i2c_test[1]_include.cmake  i2c_test[1]_tests.cmake  spi_test  spi_test[1]_include.cmake  spi_test[1]_tests.cmake  uart_bench  uart_test  uart_test[1]_include.cmake  uart_test[1]_tests.cmake
i2c_build/Testing/Temporary/: CTestCostData.txt
i2c_build/coverage/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
i2c_build/coverage/crc/include/: crc_strategy.hpp.func-c.html  crc_strategy.hpp.func.html  crc_strategy.hpp.gcov.html  frame_codec.hpp.func-c.html  frame_codec.hpp.func.html  frame_codec.hpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
i2c_build/coverage/crc/src/: crc16_ccitt.cpp.func-c.html  crc16_ccitt.cpp.func.html  crc16_ccitt.cpp.gcov.html  crc8_maxim.cpp.func-c.html  crc8_maxim.cpp.func.html  crc8_maxim.cpp.gcov.html  frame_codec.cpp.func-c.html  frame_codec.cpp.func.html  frame_codec.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
i2c_build/coverage/crc/test/: crc_test.cpp.func-c.html  crc_test.cpp.func.html  crc_test.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
i2c_build/coverage/gpio/src/: digital_io.cpp.func-c.html  digital_io.cpp.func.html  digital_io.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  listeners.cpp.func-c.html  listeners.cpp.func.html  listeners.cpp.gcov.html
i2c_build/coverage/gpio/test/: gpio_test.cpp.func-c.html  gpio_test.cpp.func.html  gpio_test.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
i2c_build/coverage/i2c/include/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  pav3015_driver.hpp.func-c.html  pav3015_driver.hpp.func.html  pav3015_driver.hpp.gcov.html  sensor.hpp.func-c.html  sensor.hpp.func.html  sensor.hpp.gcov.html
i2c_build/coverage/i2c/src/: bme280_driver.cpp.func-c.html  bme280_driver.cpp.func.html  bme280_driver.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  lps22hb_driver.cpp.func-c.html  lps22hb_driver.cpp.func.html  lps22hb_driver.cpp.gcov.html  pav3015_driver.cpp.func-c.html  pav3015_driver.cpp.func.html  pav3015_driver.cpp.gcov.html  sensor_factory.cpp.func-c.html  sensor_factory.cpp.func.html  sensor_factory.cpp.gcov.html  shtc3_driver.cpp.func-c.html  shtc3_driver.cpp.func.html  shtc3_driver.cpp.gcov.html
i2c_build/coverage/i2c/test/: i2c_test_common.hpp.func-c.html  i2c_test_common.hpp.func.html  i2c_test_common.hpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  test_bme280.cpp.func-c.html  test_bme280.cpp.func.html  test_bme280.cpp.gcov.html  test_concepts.cpp.func-c.html  test_concepts.cpp.func.html  test_concepts.cpp.gcov.html  test_csv_output.cpp.func-c.html  (+17 more)
i2c_scanner/: CMakeLists.txt
i2c_scanner/src/: main.cpp
pav3015_debug/: CMakeLists.txt
pav3015_debug/boards/: nucleo_f446re.overlay
pav3015_debug/config/: prj.conf
pav3015_debug/src/: main.cpp
scratch/: read_serial.py  read_startup.py  test_raw.py
scripts/: loopback_test.py
spi/include/: adc_driver.hpp  filter.hpp  median_filter.hpp  moving_average_filter.hpp
spi/src/: adc_driver.cpp  median_filter.cpp  moving_average_filter.cpp
spi/test/: spi_test.cpp
uart/: GTest_Guide.md
uart/bench/: bench_uart.cpp
uart/include/: dma_uart.hpp  ring_buffer.hpp
uart/src/: dma_uart.cpp
uart/test/: uart_test.cpp
uart_build/: CTestTestfile.cmake  crc_test[1]_include.cmake  gpio_test[1]_include.cmake  i2c_test[1]_include.cmake  spi_test[1]_include.cmake  uart_bench  uart_test  uart_test[1]_include.cmake  uart_test[1]_tests.cmake
uart_build/Testing/Temporary/: CTestCostData.txt
zephyr_app/: CMakeLists.txt  Kconfig  build_log.txt  build_output.txt
zephyr_app/boards/: nucleo_f446re.overlay
zephyr_app/config/: crc.overlay  prj.conf  prj_all.conf  prj_crc.conf  prj_crc_loopback.conf  prj_gpio.conf  prj_i2c.conf  prj_spi.conf  prj_uart.conf
zephyr_app/run_guide.md/: UART+DMA.md  ZEPHYR_GPIO_GUIDE.md
zephyr_app/src/: crc_app.cpp  gpio_app.cpp  i2c_app.cpp  main.cpp  spi_app.cpp  uart_app.cpp
zephyr_stubs/include/: zephyr_crc_mock.hpp  zephyr_gpio_mock.hpp  zephyr_i2c_mock.hpp  zephyr_spi_mock.hpp  zephyr_uart_mock.hpp
zephyr_stubs/include/zephyr/: kernel.h
(+60 files in other folders)
